[MOSIP-10061] Updates to scripts and cleanup.

--- a/deployment/sandbox-v2/roles/packages/psycopg2/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/psycopg2/tasks/main.yml
@@ -3,3 +3,10 @@
     name: psycopg2-binary
     state: present
   become: yes
+
+- name: Install psycopg2 for python3
+  pip:
+    name: psycopg2-binary
+    state: present
+    executable: /bin/pip3
+  become: yes
