--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -69,7 +69,7 @@ keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any cli
 
 keycloak_mosip_users: # Assumption "username.json" exists with same username inside 
   - {realm_id: 'mosip', user_file: 'users/allrolesuser.json'}
-  - {realm_id: 'mosip', user_file: 'users/globaladmin.json'}
+  - {realm_id: 'mosip', user_file: 'users/superadmin.json'}
   - {realm_id: 'mosip', user_file: 'users/110005.json'}
   - {realm_id: 'mosip', user_file: 'users/110006.json'}
   - {realm_id: 'mosip', user_file: 'users/110118.json'}
@@ -136,7 +136,9 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: 'allrolesuser', role_name: 'PMS_USER'}
   - {realm_id: 'mosip', username: 'allrolesuser', role_name: 'POLICYMANAGER'}
 
-  - {realm_id: 'mosip', username: 'globaladmin', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', username: 'superadmin', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', username: 'superadmin', role_name: 'MASTERDATA_ADMIN'}
+  - {realm_id: 'mosip', username: 'superadmin', role_name: 'ZONAL_ADMIN'}
   
   - {realm_id: 'mosip', username: 'regproc_test', role_name: 'REGISTRATION_OFFICER'}
 
