--- a/deployment/sandbox-v2/roles/nginx/tasks/update_conf.yml
+++ b/deployment/sandbox-v2/roles/nginx/tasks/update_conf.yml
@@ -1,5 +1,8 @@
 # Tasks to update nginx conf file and restart nginx
 #
+
+- include_vars: '{{versions_file}}' # Need for resolving various versions
+
 - name: nginx conf template {{nginx_conf_template}} to yml 
   template:
     src: '{{nginx_conf_template}}'
