[MOSIP-10177] added new artifactory service

--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -17,6 +17,7 @@
 - import_playbook: playbooks/dmzmonitoring.yml
 # Non-MOSIP modules
 - import_playbook: playbooks/postgres.yml
+- import_playbook: playbooks/artifactory.yml
 - import_playbook: playbooks/keycloak.yml
 - import_playbook: playbooks/mzclamav.yml  # Each zone has it's own clamav
 - import_playbook: playbooks/dmzclamav.yml
