[MOSIP-10061] Partner creation script added.

--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -70,6 +70,8 @@ keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any cli
 keycloak_mosip_users: # Assumption "username.json" exists with same username inside 
   - {realm_id: 'mosip', user_file: 'users/allrolesuser.json'}
   - {realm_id: 'mosip', user_file: 'users/superadmin.json'}
+  - {realm_id: 'mosip', user_file: 'users/policymanager.json'}
+  - {realm_id: 'mosip', user_file: 'users/partner1.json'}
   - {realm_id: 'mosip', user_file: 'users/110005.json'}
   - {realm_id: 'mosip', user_file: 'users/110006.json'}
   - {realm_id: 'mosip', user_file: 'users/110118.json'}
@@ -139,6 +141,10 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: 'superadmin', role_name: 'GLOBAL_ADMIN'}
   - {realm_id: 'mosip', username: 'superadmin', role_name: 'MASTERDATA_ADMIN'}
   - {realm_id: 'mosip', username: 'superadmin', role_name: 'ZONAL_ADMIN'}
+
+  - {realm_id: 'mosip', username: 'policymanager', role_name: 'POLICYMANAGER'}
+
+  - {realm_id: 'mosip', username: 'partner1', role_name: 'PARTNER'}
   
   - {realm_id: 'mosip', username: 'regproc_test', role_name: 'REGISTRATION_OFFICER'}
 
