--- a/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
@@ -44,6 +44,8 @@ spec:
           value: {{ .Values.services.key.hsmUrl }} 
         - name: iam_adapter_url_env
           value: {{ .Values.iamAdapterUrl }}
+        - name: zip_file_path
+          value: {{ .Values.services.key.hsm_zip_file }}
         ports:
         - containerPort: {{ .Values.services.key.containerPort }}
         readinessProbe:
