--- a/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
@@ -45,7 +45,7 @@ spec:
         - name: iam_adapter_url_env
           value: {{ .Values.iamAdapterUrl }}
         - name: zip_file_path
-          value: {{ .Values.services.key.hsm_zip_file }}
+          value: {{ .Values.services.key.hsmClientZipPath }}
         ports:
         - containerPort: {{ .Values.services.key.containerPort }}
         readinessProbe:
