--- a/deployment/sandbox-v2/helm/charts/kernel/templates/keys-job.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/keys-job.yaml
@@ -38,4 +38,4 @@ spec:
         - name: PKCS11_PROXY_SOCKET
           value: {{ .Values.generators.keygen.hsmUrl }} 
         - name: zip_file_path
-          value: {{ .Values.generators.keygen.hsm_zip_file }}
+          value: {{ .Values.generators.keygen.hsmClientZipPath }}
