Taint added for minio.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -134,6 +134,12 @@ postgres:
 minio:
   access_key: admin
   nfs_path: '{{nfs.folder}}/minio'
+  node_affinity: 
+    enabled: false # To run minio on an exclusive node
+    node: 'mzworker1.sb' # Hostname. Run only on this node, and nothing else should run on this node
+    taint:
+      key: "minio" # Key for applying taint on node
+      value: "only"  
 
 # Keycloak
 keycloak:
