[MOSIP-9993] Replication factor added for many modules.

--- a/deployment/sandbox-v2/helm/charts/pms/templates/pm-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/pm-dep.yaml
@@ -8,7 +8,7 @@ metadata:
     component: {{ .Values.component }} 
     
 spec:
-  replicas: 1
+  replicas: {{ .Values.services.pm.podconfig.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.services.pm.serviceName }} 
