--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/cred-req-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/cred-req-dep.yaml
@@ -8,7 +8,7 @@ metadata:
     component: {{ .Values.component }} 
     
 spec:
-  replicas: 1
+  replicas: {{ .Values.services.credentialrequest.podconfig.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.services.credentialrequest.serviceName }} 
