--- a/deployment/sandbox-v2/podconfig.yml
+++ b/deployment/sandbox-v2/podconfig.yml
@@ -1,76 +1,116 @@
 podconfig:
-    kernel:
-      auth:
-        replicas: 1 
-      masterdata:
-        replicas: 1 
-      idgen:
-        replicas: 1 
-      prid:
-        replicas: 1 
-      sync:
-        replicas: 1 
-      audit :
-        replicas: 1 
-      key:
-        replicas: 1 
-      notifier:
-        replicas: 1 
-      otp:
-        replicas: 1 
-      rid:
-        replicas: 1 
-      keygen:
-        replicas: 1 
+  kernel:
+    auth:
+      replicas: 1 
+    masterdata:
+      replicas: 1 
+    idgen:
+      replicas: 1 
+    prid:
+      replicas: 1 
+    sync:
+      replicas: 1 
+    audit :
+      replicas: 1 
+    key:
+      replicas: 1 
+    notifier:
+      replicas: 1 
+    otp:
+      replicas: 1 
+    rid:
+      replicas: 1 
+    keygen:
+      replicas: 1 
 
-    regproc:
-      camel:
-        replicas: 1 
-      notification: 
-        replicas: 1 
-      uploader:
-        replicas: 1 
-      quality:
-        replicas: 1 
-      validator:
-        replicas: 1 
-      osi:
-        replicas: 1 
-      demo:
-        replicas: 1 
-      bio:
-        replicas: 1 
-      bioauth:
-        replicas: 1 
-      abishandler:
-        replicas: 1 
-      abismid:
-        replicas: 1 
-      proxyabis:
-        replicas: 1 
-      manual:
-        replicas: 1 
-      external:
-        replicas: 1 
-      eis: 
-        replicas: 1 
-      uin:
-        replicas: 1 
-      msg:
-        replicas: 1 
-      print:
-        replicas: 1 
-      trans:
-        replicas: 1 
-      reprocess:
-        replicas: 1 
+  regproc:
+    camel:
+      replicas: 1 
+    notification: 
+      replicas: 1 
+    uploader:
+      replicas: 1 
+    quality:
+      replicas: 1 
+    validator:
+      replicas: 1 
+    osi:
+      replicas: 1 
+    demo:
+      replicas: 1 
+    bio:
+      replicas: 1 
+    bioauth:
+      replicas: 1 
+    abishandler:
+      replicas: 1 
+    abismid:
+      replicas: 1 
+    proxyabis:
+      replicas: 1 
+    manual:
+      replicas: 1 
+    external:
+      replicas: 1 
+    eis: 
+      replicas: 1 
+    uin:
+      replicas: 1 
+    msg:
+      replicas: 1 
+    print:
+      replicas: 1 
+    trans:
+      replicas: 1 
+    reprocess:
+      replicas: 1 
 
-    dmzregproc:  
-      receiver:
-        replicas: 1 
-      camel:
-        replicas: 1 
-      status:
-        replicas: 1 
-      pktserver:
-        replicas: 1 
+  dmzregproc:  
+    receiver:
+      replicas: 1 
+    camel:
+      replicas: 1 
+    status:
+      replicas: 1 
+    pktserver:
+      replicas: 1 
+
+  ida:
+    auth:
+      replicas: 1 
+    internal: 
+      replicas: 1 
+    kyc: 
+      replicas: 1 
+    otp: 
+      replicas: 1 
+
+  idrepo:
+    identity:
+      replicas: 1 
+    vid: 
+      replicas: 1 
+    bioextractor:
+      replicas: 1 
+    credentialreq:
+      replicas: 1 
+    credentialservice:
+      replicas: 1 
+
+  pms:
+    misp: 
+      replicas: 1 
+    pm:
+      replicas: 1 
+    partner:
+      replicas: 1 
+    policy:
+      replicas: 1 
+
+  packetmanager:
+    service:
+      replicas: 1 
+
+  datashare:
+    service:
+      replicas: 1 
