--- a/deployment/sandbox-v2/helm/charts/minio/templates/ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/minio/templates/ingress.yaml
@@ -18,3 +18,7 @@ spec:
         backend:
           serviceName: {{ template "minio.fullname" . }}
           servicePort: {{ .Values.service.port }} 
+      - path: /minio-api(/|$)(.*)  # To api's
+        backend:
+          serviceName: {{ template "minio.fullname" . }}
+          servicePort: {{ .Values.service.port }}
