--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -143,7 +143,7 @@ versions:
     
     packetmanager:
       service:
-        'packetmanager-service': 'mosipdev/commons-packet-service:1.1.3'
+        'packetmanager-service': 'mosipdev/commons-packet-service:develop'
 
     datashare:
       service:
