--- a/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
@@ -44,6 +44,8 @@ spec:
           value: {{ .Values.services.internal.hsmUrl }} 
         - name: mosipbox_public_url
           value: {{ .Values.sitePublicUrl }}
+        - name: zip_file_path
+          value: {{ .Values.services.internal.hsmClientZipPath }}
         ports:
         - containerPort: {{ .Values.services.internal.containerPort }}
 
