[MOSIP-10353] updating branch 1.1.3 changes

--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -29,6 +29,7 @@
 - import_playbook: playbooks/packetmanager.yml
 - import_playbook: playbooks/datashare.yml
 - import_playbook: playbooks/prereg.yml
+- import_playbook: playbooks/websub.yml
 - import_playbook: playbooks/regproc.yml
 - import_playbook: playbooks/ida.yml
 - import_playbook: playbooks/idrepo.yml
