--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -37,6 +37,6 @@
 - import_playbook: playbooks/resident.yml
 - import_playbook: playbooks/admin.yml
 - import_playbook: playbooks/print.yml
-#- import_playbook: playbooks/mockabis.yml
+- import_playbook: playbooks/mockabis.yml
 # Regclient downloader
 - import_playbook: playbooks/reg-client-downloader.yml
