[MOSIP-10198] Local docker registry feature implemented.

--- a/deployment/sandbox-v2/group_vars/k8s.yml
+++ b/deployment/sandbox-v2/group_vars/k8s.yml
@@ -36,7 +36,8 @@ enable_dashboard: yes
 
 # A list of insecure registries you might need to define
 # insecure_registries: []
-insecure_registries: ['gcr.io']
+k8s_registries: ['gcr.io']  
+insecure_registries: '{{k8s_registries +  docker_registries}}'  # Additionl registries from group_vars/all.yml
 
 systemd_dir: /lib/systemd/system
 system_env_dir: /etc/sysconfig
