--- a/deployment/sandbox-v2/playbooks/nfs-provisioner.yml
+++ b/deployment/sandbox-v2/playbooks/nfs-provisioner.yml
@@ -12,5 +12,6 @@
     helm_values: '{{charts_root}}/nfs-client-provisioner/values.template.j2'
     helm_strings: ''
   roles:
-     - {role:  helm}
+     - {role:  helm, vars: {kube_config: '{{clusters.mz.kube_config}}'}}
+     - {role:  helm, vars: {kube_config: '{{clusters.dmz.kube_config}}'}}
 
