--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -23,6 +23,7 @@
 - import_playbook: playbooks/activemq.yml
 - import_playbook: playbooks/minio.yml
 - import_playbook: playbooks/artifactory.yml
+- import_playbook: playbooks/mock-biosdk.yml
 # MOSIP modules
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/kernel.yml
