--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -22,6 +22,7 @@ keycloak_mosip_clients:
   - {realm_id: 'mosip', client_id: 'mosip-creser-client', secret: 'abc123'}
   - {realm_id: 'mosip', client_id: 'mosip-datsha-client', secret: 'abc123'}
   - {realm_id: 'mosip', client_id: 'mosip-abis-client', secret: 'abc123'}
+  - {realm_id: 'mosip', client_id: 'mosip-creser-idpass-client', secret: 'abc123'}
 
 keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any client)
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
@@ -402,3 +403,10 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: 'service-account-mosip-datsha-client', role_name: 'POLICYMANAGER'}
   - {realm_id: 'mosip', username: 'service-account-mosip-admin-client', role_name: 'MASTERDATA_ADMIN'}
   - {realm_id: 'mosip', username: 'service-account-mosip-partner-client', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-idpass-client', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-idpass-client', role_name: 'DATA_READ'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-idpass-client', role_name: 'DOCUMENT_READ'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-idpass-client', role_name: 'BIOMETRIC_READ'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-idpass-client', role_name: 'METADATA_READ'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-idpass-client', role_name: 'CREATE_SHARE'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-idpass-client', role_name: 'CREDENTIAL_REQUEST'}
