--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -55,13 +55,13 @@ docker_registries:
 clusters:
   mz:
     kube_config:  "{{lookup('env', 'HOME') }}/.kube/mzcluster.config" 
-    nodeport_node: mzworker0.sb  # Any node on cluster for nodeport access
+    nodeport_node: '{{groups.mzworkers[0]}}'  # Any node on cluster for nodeport access
     ingress:
       namespace: ingress-nginx
       nodeports:
         http: 30080 
         https: 30443
-      base_url: 'http://{{groups["mzworkers"][0]}}:30080' # Any node since ingress runs on nodeport
+      base_url: 'http://{{groups.mzworkers[0]}}:30080' # Any node since ingress runs on nodeport
     dashboard:
       url: /mz-dashboard
       token_file: '{{tmp_dir}}/dashboard_mz.token'
@@ -86,7 +86,7 @@ clusters:
         url: http://kibana-kibana:5601 
   dmz:
     kube_config:  "{{lookup('env', 'HOME') }}/.kube/dmzcluster.config" 
-    nodeport_node: dmzworker0.sb  # Any node on cluster for nodeport access
+    nodeport_node: '{{groups.dmzworkers[0]}}'  # Any node on cluster for nodeport access
     ingress:
       namespace: ingress-nginx
       nodeports:
@@ -112,9 +112,9 @@ clusters:
       grafana_ingress_path: 'dmz-grafana'
       grafana_token_file: '{{tmp_dir}}/grafana_dmz.token'
       elasticsearch:
-        host: 'mzworker0.sb:30080/elasticsearch' # Connect to elasticsearch on MZ
+        host: '{{groups.mzworkers[0]:30080/elasticsearch' # Connect to elasticsearch on MZ
       kibana: 
-        url: http://mzworker0.sb:30601  # Kibana runs on this nodeport on MZ. 
+        url: 'http://{{groups.mzworkers[0]}}:30601'  # Kibana runs on this nodeport on MZ. 
 
 # Registration processor shared variables
 #
@@ -135,7 +135,7 @@ postgres:
   max_connections: 1000
   node_affinity: 
     enabled: false # To run postgres on an exclusive node
-    node: 'mzworker0.sb' # Hostname. Run only on this node, and nothing else should run on this node
+    node: '{{groups.mzworkers[0]}}' # Hostname. Run only on this node, and nothing else should run on this node
     taint:
       key: "postgres" # Key for applying taint on node
       value: "only"  
@@ -146,7 +146,7 @@ minio:
   nfs_path: '{{nfs.folder}}/minio'
   node_affinity: 
     enabled: false # To run minio on an exclusive node
-    node: 'mzworker1.sb' # Hostname. Run only on this node, and nothing else should run on this node
+    node: '{{groups.mzworkers[1]}}' # Hostname. Run only on this node, and nothing else should run on this node
     taint:
       key: "minio" # Key for applying taint on node
       value: "only"  
@@ -283,7 +283,7 @@ hdfs:
       path: '{{nfs.folder}}/hdfs/dn' 
   node_affinity: 
     enabled: false # To run all hdfs pods exclusively on a single node.
-    node: 'mzworker1.sb' # Hostname. Run only on this node, and nothing else should run on this node
+    node: '{{groups.mzworkers[1]}}' # Hostname. Run only on this node, and nothing else should run on this node
     taint:
       key: "hdfs" # Key for applying taint on node
       value: "only"  
@@ -293,7 +293,7 @@ config_repo:
   # config server points to the same. Any changes done on local repo and will not  get reflected in 
   # the parent git repo.
   git_repo_uri: https://github.com/mosip/mosip-config
-  version: 1.1.2
+  version: 1.1.3
   private: false
   username: githubusername # Applicable only if private=true. Password is expected to be in vaulted secrets.yml 
   search_folders: sandbox # Subdir in repo containing properties
@@ -305,7 +305,7 @@ config_repo:
 config_server:
   name: config-server
   internal_url: http://config-server/config
-  ingress_url: http://mzworker0.sb:30080/config
+  ingress_url: '{{clusters.mz.ingress.base_url}}/config'
 
 activemq:
   name: activemq
